# t-display-s3-amoled-rs

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
src/: lib.rs  rm67162.rs  rm67162dma.rs
src/rm67162/: dma.rs
ui/: main.slint
