[package]
name = "t-display-s3-amoled"
version = "0.1.0"
authors = ["BH1XUW <bh1xuw@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hal = { package = "esp32s3-hal", version = "0.9.0", features = [
    "async",
    "embassy",
    "embassy-time-systick",
    "rt",
] }
esp-backtrace = { version = "0.7.0", features = [
    "esp32s3",
    "panic-handler",
    "exception-handler",
    "print-uart",
] }
esp-println = { version = "0.5.0", features = ["esp32s3"] }
esp-alloc = { version = "0.3.0" }

embassy-executor = { version = "0.2.0", features = [
    "nightly",
    "integrated-timers",
    "arch-xtensa",
    "executor-thread",
] }

embedded-hal-1 = { package = "embedded-hal", version = "1.0.0-alpha.10" }
embedded-graphics = { version = "0.8.0", features = ["defmt"] }


[features]
default = []
