[package]
name = "t-display-s3-amoled"
version = "0.1.0"
authors = ["BH1XUW <bh1xuw@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bh1xuw/t-display-s3-amoled"
documentation = "https://docs.rs/t-display-s3-amoled"
homepage = "https://github.com/bh1xuw/t-display-s3-amoled"
categories = ["hardware-support", "no-std", "embedded"]
description = "BSP for T-Display S3 AMOLED, ESP32-S3 board with RM67162 AMOLED display"
keywords = ["rm67162", "amoled"]
readme = "README.md"

[dependencies]
hal = { package = "esp32s3-hal", version = "0.15.0", features = [
    "rt",
] }
esp-backtrace = { version = "0.7.0", features = [
    "esp32s3",
    "panic-handler",
    "exception-handler",
    "print-uart",
] }
esp-println = { version = "0.5.0", features = ["esp32s3"] }
esp-alloc = { version = "0.3.0" }

embedded-hal-1 = { package = "embedded-hal", version = "1.0.0" }
embedded-graphics = { version = "0.8.0" }
slint = { version = "1.0.2", default-features = false, features = [
    "compat-1-0",
    "libm",
    "unsafe-single-threaded",
] }
tinygif = "0.0.3"


[build-dependencies]
slint-build = "1.0.0"

[features]
default = []
